@@ -301,6 +301,10 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   Meeting.assemblyXXX fields are now displayed one under the other on the meeting_view and it is hidden using a collapsible widget
 - Reindex item (reindexObject) when an advice is added/edited/deleted, this way if some custom indexes are managed depending on
   a value of the advice, it is updated if necessary
+- Changed the way MeetingConfig.customAdvisers 'available_on' value works.  Before, it was only evaluated if user could effectively
+  edit the item, it was a way to restrict some values to some editors profiles.  Now, it can also be used to give non editors the
+  possibility to change the advice delay, for example, the advisers of an advice with delay could now be able to edit the advice delay.
+  The value 'mayEdit' has been added to the available variables in the expression and is True if current user may edit the item
 
 3.3 (2015-02-27)
 ----------------
